# Ai-voice-cover

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-desktop.yml  ci.yml  docker.yml  release.yml
backend/: config.py  main.py
backend/api/: hf_routes.py  ml_routes.py  model_routes.py  routes.py  schemas.py  train_routes.py  tts_routes.py  voice_routes.py
backend/backends/: base.py  cloud_api.py  factory.py  gpt_sovits.py  local_gpu.py
backend/core/: cleanup.py  database.py  device.py  ffmpeg_util.py  hf_hub.py  mixer.py  pipeline.py  rvc_infer.py  separator.py
backend/core/rvc/: rmvpe.py
backend/training/: trainer.py
backend/tts/: __init__.py  base.py  edge_tts_provider.py  manager.py  mimo_provider.py
backend/workers/: celery_app.py  tasks.py
frontend/: index.html
frontend-vue/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-vue/src/: App.vue  AppContent.vue  AppWrapper.vue  main.ts  style.css  theme.css
frontend-vue/src/components/: Pipeline.vue  ToastContainer.vue  UploadZone.vue
frontend-vue/src/composables/: useApi.ts  useI18n.ts  useToast.ts
scripts/: build-desktop.sh  demucs_wrapper.py  download_models.py  download_models.sh  requirements-ml.txt  requirements.txt  run_local.sh  set-version.js  setup_gpt_sovits.sh  sidecar-launcher.py
scripts/gitea/: README.md  docker-compose.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: test_api.py
(+21 files in other folders)
