[project]
name = "ai-voice-cover"
version = "0.1.0"
description = "AI Voice Cover - 人声分离 + 声音转换 + 混合输出"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "demucs>=4.0.0",
    "praat-parselmouth>=0.4.3",
    "faiss-cpu>=1.8.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]
